--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Easy Loot Sell
+author=TarrenG
+description=Easily identify items to be sold within a loot tab
+tags=loot tab,sell,easy,bank,deposit,highlight,prices
+plugins=com.easylootsell.EasyLootSellPlugin
