Add loot tab re-arranging, off by default. Closes #5

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Easy Loot Sell
-author=TarrenG
+author=TarrenG,m0bilebtw
 description=Easily identify items to be sold within a loot tab
-tags=loot tab,sell,easy,bank,deposit,highlight,prices
+tags=loot tab,sell,easy,bank,deposit,highlight,prices,hide,placeholder
 plugins=com.easylootsell.EasyLootSellPlugin
